// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SNavbar renders correctly 1`] = `
<nav
  className="navbar navbar-inverse navbar-fixed-top"
>
  <div
    className="container"
  >
    <div
      className="navbar-header"
    >
      <a
        className="navbar-brand"
        href="/"
      >
        <img
          alt="Logo"
          className="Nav-logo"
          src={undefined}
        />
      </a>
      <button
        className="navbar-toggle collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="sr-only"
        >
          Toggle navigation
        </span>
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
      </button>
    </div>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
    >
      
    </div>
  </div>
</nav>
`;

exports[`SNavbar renders correctly with logo 1`] = `
<nav
  className="navbar navbar-inverse navbar-fixed-top"
>
  <div
    className="container"
  >
    <div
      className="navbar-header"
    >
      <a
        className="navbar-brand"
        href="/"
      >
        <img
          alt="Logo"
          className="Nav-logo"
          src="logo.svg"
        />
      </a>
      <button
        className="navbar-toggle collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="sr-only"
        >
          Toggle navigation
        </span>
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
      </button>
    </div>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
    >
      
    </div>
  </div>
</nav>
`;

exports[`SNavbar renders correctly with logo and no items 1`] = `
<nav
  className="navbar navbar-inverse navbar-fixed-top"
>
  <div
    className="container"
  >
    <div
      className="navbar-header"
    >
      <a
        className="navbar-brand"
        href="/"
      >
        <img
          alt="Logo"
          className="Nav-logo"
          src="logo.svg"
        />
      </a>
      <button
        className="navbar-toggle collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="sr-only"
        >
          Toggle navigation
        </span>
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
      </button>
    </div>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
    >
      <ul
        className="nav navbar-nav navbar-right"
        role={null}
      />
    </div>
  </div>
</nav>
`;

exports[`SNavbar renders correctly with logo and valid items 1`] = `
<nav
  className="navbar navbar-inverse navbar-fixed-top"
>
  <div
    className="container"
  >
    <div
      className="navbar-header"
    >
      <a
        className="navbar-brand"
        href="/"
      >
        <img
          alt="Logo"
          className="Nav-logo"
          src="logo.svg"
        />
      </a>
      <button
        className="navbar-toggle collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="sr-only"
        >
          Toggle navigation
        </span>
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
      </button>
    </div>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
    >
      <ul
        className="nav navbar-nav navbar-right"
        role={null}
      >
        <li
          className=""
          role="presentation"
          style={undefined}
        >
          <a
            href="https://www.clasesdeequitacionmadrid.com/instalaciones-hipica"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            Instalaciones
          </a>
        </li>
        <li
          className=""
          role="presentation"
          style={undefined}
        >
          <a
            href="https://www.clasesdeequitacionmadrid.com/clases-de-equitacion"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            Clases
          </a>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`SNavbar renders correctly with logo and valid nested item 1`] = `
<nav
  className="navbar navbar-inverse navbar-fixed-top"
>
  <div
    className="container"
  >
    <div
      className="navbar-header"
    >
      <a
        className="navbar-brand"
        href="/"
      >
        <img
          alt="Logo"
          className="Nav-logo"
          src="logo.svg"
        />
      </a>
      <button
        className="navbar-toggle collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="sr-only"
        >
          Toggle navigation
        </span>
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
      </button>
    </div>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
    >
      <ul
        className="nav navbar-nav navbar-right"
        role={null}
      >
        <li
          className="dropdown"
          style={undefined}
        >
          <a
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle"
            href="#"
            id="basic-nav-dropdown"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            Actividades
             
            <span
              className="caret"
            />
          </a>
          <ul
            aria-labelledby="basic-nav-dropdown"
            className="dropdown-menu"
            role="menu"
          >
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="https://www.clasesdeequitacionmadrid.com/cumpleanos-con-caballos"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Cumpleaños
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="https://www.clasesdeequitacionmadrid.com/campamento-hipico"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Campamentos
              </a>
            </li>
          </ul>
        </li>
        <li
          className=""
          role="presentation"
          style={undefined}
        >
          <a
            href="https://www.clasesdeequitacionmadrid.com/blog"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            Blog
          </a>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;
